Added user to orders

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.show-sql=true
 #H2 settings
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+logging.level.org.springframework.web=DEBUG
